# ai-ml-journey

./: .gitignore  README.md  config-example.py  main.py  pyproject.toml  requirements-clean.txt  setup.py
datasets/: data-sources.md
notebooks/basic/: 01-predict-genre-decision-tree.ipynb
notes/: ai-ml concepts.md
tutorials/pandas/: new_to_pandas.py  pandas.md
utils/: __init__.py
