[project]
name = "ai-ml-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
